--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -11,7 +11,7 @@ header.clone {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 100;
+    z-index: 990;
     transform: translateY(-100%);
     transition: 0.2s transform cubic-bezier(.3,.73,.3,.74);
 }
